erb to slim, i18n

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -7,8 +7,12 @@ ru:
         login: 'Войти'
         signup: 'Регистрация'
         forgotPassword: 'Забыли пароль?'
+        didnotRecInstructions: "Не получили инструкции по подтверждению email?"
+        didnotReceiveUnlockInstructions: "Не получили инструкции по разблокировке?"
 
     confirmations:
+      new:
+        title: "Отправьте инструкции по подтверждению "
       confirmed: "Ваша учётная запись успешно подтверждена."
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
@@ -35,6 +39,13 @@ ru:
       failure: "Вы не можете войти в систему с учётной записью из %{kind}, так как \"%{reason}\"."
       success: "Вход в систему выполнен с учётной записью из %{kind}."
     passwords:
+      new:
+        forgotPassword: "Забыли пароль?"
+        reset_btn: "Сбросить пароль?"
+      edit:
+        password_change: "Изменить пароль"
+        password: "Новый пароль"
+        password_confirmation: "Подтвердите пароль"
       no_token: "Эта страница доступна только при переходе с email для сброса пароля. Если Вы перешли по ссылке из письма, пожалуйста, убедитесь, что вы использовали полный URL."
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению вашего пароля."
