--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -15,3 +15,6 @@ ru:
         attributes:
           user: 'Пользователь'
           body: 'Вопрос'
+  flash:
+    success:
+      new_question: 'Вы создали вопрос'
