--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -12,6 +12,7 @@ ru:
         body: 'Вопрос'
       user:
         password: 'Пароль'
+        password_confirmation: 'Подтвердите пароль'
   errors:
     models:
       answer:
@@ -22,6 +23,7 @@ ru:
       blank: "не может быть пустым"
       invalid: "не правильный"
       empty: "не может быть пустым/не существует"
+      taken: "уже существует"
   flash:
     success:
       new_question: 'Вы создали вопрос'
