--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -30,3 +30,4 @@ ru:
     success:
       new_question: 'Вы создали вопрос'
       new_answer: 'Вы создали ответ'
+      delete_answer: 'Вы удалили свой ответ'
