feature edit question - red ->green, answer - I18n

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,7 +6,9 @@ ru:
       ask: 'Задать вопрос'
   answers:
     form:
+      edit: 'Редактировать'
       submit: 'Создать ответ'
+      edit_save: 'Изменить ответ'
   layouts:
     application:
       hello: 'Добро пожаловать'
