spec answer, edit view answer, edit question for answer

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -8,6 +8,7 @@ ru:
       answer:
         body: 'Ответ'
         delete: 'Удалить'
+        title: 'Ответ'
       question:
         title: 'Наименование'
         body: 'Вопрос'
