view, specs - vote

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -27,6 +27,7 @@ ru:
       invalid: "не правильный"
       empty: "не может быть пустым/не существует"
       taken: "уже существует"
+      cannotvote: "Вы не можете голосовать"
   flash:
     success:
       new_question: 'Вы создали вопрос'
