actioncable comments and attach for answers

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -25,6 +25,9 @@ ru:
   attachment:
     form:
       delete_attach: 'Удалить файл'
+  comments:
+      form:
+        submit: 'Добавить комментарий'
   layouts:
     application:
       hello: 'Добро пожаловать'
