--- a/config/locales/responders.ru.yml
+++ b/config/locales/responders.ru.yml
@@ -12,6 +12,11 @@ en:
         alert: '%{resource_name} не удалён.'
     questions:
       create:
-        notice: 'Вы создали вопрос'
+        notice: 'Вы создали вопрос.'
       destroy:
-        notice: 'Вы удалили вопрос'
+        notice: 'Вы удалили вопрос.'
+    answers:
+      create:
+        notice: "Вы создали ответ."
+      destroy:
+        notice: 'Вы удалили ответ.'
