--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -71,6 +71,9 @@ ru:
       signed_up_but_unconfirmed: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       update_needs_confirmation: "Ваш аккаунт успешно обновлен, нонеобходимо подтвердить Ваш новый адрес email. Пожалуйста, проверьте свою электронную почту и нажмите на ссылку \"Подтвердить\", чтобы завершить обновления email."
       updated: "Ваша учётная запись успешно изменена."
+      user:
+        success: "Вы успешно зарегистрировались под %{kind} ."
+        send_instructions: "Вы получите электронное письмо с инструкциями для того, как подтвердить свой адрес электронной почты в течение нескольких минут."
     sessions:
       new:
         title: 'Войти'
