--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -30,6 +30,7 @@ ru:
       empty: "не может быть пустым/не существует"
       taken: "уже существует"
       cannotvote: "Вы не можете голосовать"
+      oauth: "Не найден пользователь"
 
   flash:
     success:
