add new local for question

--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -24,6 +24,10 @@ ru:
         attributes:
           user: 'Пользователь'
           body: 'Вопрос'
+      question:
+        attributes:
+          body:
+            too_short: 'должен быть больше 5 знаков.'
     messages:
       blank: "не может быть пустым"
       invalid: "не правильный"
